-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
-
2da00bfc3a (qt/qtbase/dev) a37e9b44e7 (qt/qtbase/6.2) a37e9b44e7 (qt/tqtc-qtbase/6.2) 2da00bfc3a (qt/tqtc-qtbase/dev) a81ae26998 (qt/qtbase/6.3) a81ae26998 (qt/tqtc-qtbase/6.3)
tst_qquickwidget fails cases on Android
1: FAIL! : tst_qquickwidget::enterLeave() '(QCursor::pos() == outside)' returned FALSE. () 1: Loc: [/Users/assam/sources/qt6/qt6/qtdeclarative/tests/auto/quickwidgets/qquickwidget/tst_qquickwidget.cpp(552)] 1: FAIL! : tst_qquickwidget::resizeOverlay() Compared values are not the same 1: Actual (rootItem->width()): 411 1: Expected (200) : 200 1: Loc: [/Users/assam/sources/qt6/qt6/qtdeclarative/tests/auto/quickwidgets/qquickwidget/tst_qquickwidget.cpp(736)] 1: FAIL! : tst_qquickwidget::focusOnClickInProxyWidget() '(text1->hasActiveFocus())' returned FALSE. () 1: Loc: [/Users/assam/sources/qt6/qt6/qtdeclarative/tests/auto/quickwidgets/qquickwidget/tst_qquickwidget.cpp(841)]
Update: with the latest patch the previous fails are fixed. But there is a new failure that leads to a crash:
I/QTestLib: QFATAL : tst_qquickwidget::reparentToNewWindow() ASSERT: "!m_windowStack.contains(window)" in file <qt5 path>/qtbase/src/plugins/platforms/android/qandroidplatformscreen.cpp, line 194
I/QTestLib: FAIL! : tst_qquickwidget::reparentToNewWindow() Received a fatal error.
- resulted from
-
QTBUG-99194
Report failing qtdeclarative tests
-
- Closed
-
-
QTBUG-101909
Fix qtdeclarative test bugs
-
- Open
-