Android: Don't assert in add/removeWindow

No need to assert, returning when the window is already added or not
removed is enough.

Fixes: QTBUG-100173
Change-Id: Id491f17612ce42c4e26e9d41ad38f0a6372775bd
Reviewed-by: Andreas Buhr <andreas.buhr@qt.io>
Reviewed-by: Ivan Solovev <ivan.solovev@qt.io>
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>
(cherry picked from commit 2da00bfc3a4361eb1bf2e008ddaceb215c63934d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>